@@ -44,11 +44,7 @@ void Image_window::show_scaled8to8_point(
 	 display_surface->pitch,
 	 manip, scale);
 
-#if SDL_VERSION_ATLEAST(2, 0, 0)
-	UpdateRect(display_surface, scale * x, scale * y, scale * w, scale * h);
-#else   
 	SDL_UpdateRect(display_surface, scale * x, scale * y, scale * w, scale * h);
-#endif
 }
 
 void Image_window::show_scaled8to16_point(
@@ -63,11 +59,7 @@ void Image_window::show_scaled8to16_point(
 	 display_surface->pitch /
 	 display_surface->format->BytesPerPixel,
 	 manip, scale);
-#if SDL_VERSION_ATLEAST(2, 0, 0)
-	UpdateRect(display_surface, scale * x, scale * y, scale * w, scale * h);
-#else   
 	SDL_UpdateRect(display_surface, scale * x, scale * y, scale * w, scale * h);
-#endif
 }
 
 void Image_window::show_scaled8to555_point(
@@ -82,11 +74,7 @@ void Image_window::show_scaled8to555_point(
 	 display_surface->pitch /
 	 display_surface->format->BytesPerPixel,
 	 manip, scale);
-#if SDL_VERSION_ATLEAST(2, 0, 0)
-	UpdateRect(display_surface, scale * x, scale * y, scale * w, scale * h);
-#else   
 	SDL_UpdateRect(display_surface, scale * x, scale * y, scale * w, scale * h);
-#endif
 }
 
 void Image_window::show_scaled8to565_point(
@@ -101,11 +89,7 @@ void Image_window::show_scaled8to565_point(
 	 display_surface->pitch /
 	 display_surface->format->BytesPerPixel,
 	 manip, scale);
-#if SDL_VERSION_ATLEAST(2, 0, 0)
-	UpdateRect(display_surface, scale * x, scale * y, scale * w, scale * h);
-#else   
 	SDL_UpdateRect(display_surface, scale * x, scale * y, scale * w, scale * h);
-#endif
 }
 
 void Image_window::show_scaled8to32_point(
@@ -120,9 +104,5 @@ void Image_window::show_scaled8to32_point(
 	 display_surface->pitch /
 	 display_surface->format->BytesPerPixel,
 	 manip, scale);
-#if SDL_VERSION_ATLEAST(2, 0, 0)
-	UpdateRect(display_surface, scale * x, scale * y, scale * w, scale * h);
-#else   
 	SDL_UpdateRect(display_surface, scale * x, scale * y, scale * w, scale * h);
-#endif
 }
